Avoid wrapping for icons in entities and improve tag legibility.Fixes #54.

--- a/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
+++ b/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
@@ -6,7 +6,6 @@ button span, #alert{
 
 #editor{
     margin-top: 155px;
-    line-height: 2.3em;
 }
 
 #breadcrumb{
@@ -37,6 +36,7 @@ page {
   margin-bottom: 0.5cm;
   box-shadow: 0 1px 3px 1px rgba(60,64,67,.15);
   width: 21cm;
+  line-height: 2.1em;
 }
 
 #alert{
